fixed landing page on smaller windows.

--- a/components/snapScroll.css
+++ b/components/snapScroll.css
@@ -17,7 +17,7 @@ body, html {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 10%;
+  padding: 8%;
   margin-bottom: 20px;
   column-gap: 100px;
 }
@@ -92,7 +92,7 @@ p {
 }
 
 /* Media Query for smaller screens */
-@media (max-width: 1000px) {
+@media (max-width: 1300px) {
   .imageLeft {
     flex-direction: column;
     padding: 10%;
